[package]
name = "rust-potrace"
description = "A Rust/WASM port of Potrace"
version = "0.0.0"
authors = ["Drake Costa <drake@saeris.io>"]
license = "GPL-2.0"
repository = "https://github.com/saeris/rust-potrace"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cached = "0.19.0"
regex = "1.3.9"
num = "0.3.0"
image = "0.23.9"
base64 = "0.12.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]
